# FlaskAPIdemo

./: README.rst  pyproject.toml
doc/: DataModel.drawio
src/flaskapidemo/: binary_search_tree.py  data.db  generate_dummy_data.py  hash_table.py  linked_list.py  server.py  stack_queue.py
src/flaskapidemo/static/css/: m-components.css  m-dark+documentation.compiled.css  m-dark.compiled.css  m-dark.documentation.compiled.css  m-layout.css  m-light+documentation.compiled.css  m-light.compiled.css  m-light.documentation.compiled.css  m-theme-dark.css  postprocess.py  postprocess.sh  pygments-console.py  pygments-dark.py
src/flaskapidemo/templates/: base.html.jinja  base.j2  index.html.jinja  index.j2
tests/: test_flaskapidemo.py
